# felineMessenger

./: .gitignore  README.md
feline-messenger-frontend/: package-lock.json  package.json
feline-messenger-frontend/public/: index.html
feline-messenger-frontend/src/: App.js  index.css  index.js
feline-messenger-frontend/src/assets/styles/: global.css
feline-messenger-frontend/src/components/auth/: AuthCard.js  AuthLayout.css  AuthLayout.jsx  LoginForm.js  LoginForm.jsx  RegisterForm.js  RegisterLink.jsx  RememberForgot.js  RememberForgot.jsx
feline-messenger-frontend/src/components/layout/: CardContainer.js  StaticBackground.css  StaticBackground.js
feline-messenger-frontend/src/components/main/: ChatList.js  ChatWindow.js  MainMenu.css  Navbar.js
feline-messenger-frontend/src/components/ui/: Button.css  Button.js  Button.jsx  Checkbox.css  Checkbox.js  Checkbox.jsx  InputField.css  InputField.js  InputField.jsx
feline-messenger-frontend/src/pages/: AuthPage.js  LoginPage.jsx  MainPage.js
gateway/: CMakeLists.txt
gateway/src/: main.cpp
